err/brod.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/brod'...
Compiling './lib/python3.5/site-packages/brod/blocking.py'...
***   File "./lib/python3.5/site-packages/brod/blocking.py", line 27
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/brod/nonblocking.py'...
***   File "./lib/python3.5/site-packages/brod/nonblocking.py", line 33
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/brod/util.py'...
***   File "./lib/python3.5/site-packages/brod/util.py", line 34
    print "Applying {0}:{1} to offsets {2}-{3} ({4} MB) from {5}-{6}".format(module, funcname, start, end, round(total_megabytes, 2), topic, partition_num)
                                                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/brod-0.4.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zc'...
Listing './lib/python3.5/site-packages/zc/thread'...
Listing './lib/python3.5/site-packages/zc/zk'...
Compiling './lib/python3.5/site-packages/zc/zk/__init__.py'...
***   File "./lib/python3.5/site-packages/zc/zk/__init__.py", line 60
    except Exception, v:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zc/zk/scripts.py'...
***   File "./lib/python3.5/site-packages/zc/zk/scripts.py", line 45
    print data,
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/zc/zk/testing.py'...
***   File "./lib/python3.5/site-packages/zc/zk/testing.py", line 47
    print 'assertion failed: ', mess
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/zc/zk/tests.py'...
***   File "./lib/python3.5/site-packages/zc/zk/tests.py", line 1301
    print 'async callback got', args
                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/zc.thread-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/zc.zk-0.5.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
